<resources>
    <string name="app_name">MEGASOFTAPPV2</string>
    <string name="seleccionar_rango_fechas">Seleccionar rango de fechas</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_fin">Fecha fin</string>

    <string-array name="estados_array">
        <item>Leve</item>
        <item>Moderada</item>
        <item>Grave</item>
    </string-array>


    <string name="agregar_vehiculo">Agregar vehículo</string>
    <string name="matricula">Matrícula</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="capacidad_kg">Capacidad (kg)</string>
    <string name="disponible">Disponible</string>
    <string name="nuevo_vehiculo">Nuevo vehículo</string>
    <string name="editar_vehiculo">Editar vehículo</string>

</resources>